--- a/transit/popup.html
+++ b/transit/popup.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="css/popup.css" type="text/css" />
   </head>
   <body>
-    <form id="form-search">
-      <input type="text" id="source" placeholder="输入单词" />
+    <form id="form-search" action="jvascript:;">
+      <input type="text" id="source" name="source" placeholder="输入单词" />
       <input type="submit" id="search" value="查询" />
     </div>
     
     <div id="result"></div>
 
+    <script src="js/helpers.js" type="text/javascript"></script>
     <script src="js/popup.js" type="text/javascript"></script>
   </body>
 </html>
