更新弹出窗口

--- a/transit/popup.html
+++ b/transit/popup.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/popup.css" type="text/css" />
   </head>
   <body>
+    <h3>TransIt</h3>
+
     <form id="form-search" action="jvascript:;">
       <input type="text" id="source" name="source" placeholder="输入单词" />
       <input type="submit" id="search" value="查询" />
