--- a/transit/popup.html
+++ b/transit/popup.html
@@ -11,7 +11,7 @@
   <section id="result"></section>
 
   <section id="options">
-    <label><input type="checkbox" name="option-page-selection-status" /> 启用页面划词</label>
+    <label><input type="checkbox" id="toggle" name="page_selection_enabled" />启用页面划词</label>
   </section>
 
   <script src="js/sugar.min.js" type="text/javascript"></script>
@@ -19,4 +19,3 @@
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
 </html>
-
