--- a/transit/popup.html
+++ b/transit/popup.html
@@ -14,7 +14,7 @@
     <label><input type="checkbox" id="toggle" name="page_selection_enabled" />启用页面划词</label>
   </section>
 
-  <script src="js/sugar.min.js" type="text/javascript"></script>
+  <script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
   <script src="js/helpers.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
