--- a/transit/popup.html
+++ b/transit/popup.html
@@ -11,14 +11,15 @@
   <section id="result"></section>
 
   <section id="options">
-    <label><input type="checkbox" id="toggle" name="page_selection_enabled" />启用页面划词</label><br/>
+    <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
-      <input type="range" min="1" max="10" step="1" id="timeout" name="notify_timeout" />
+      <input type="range" min="1" max="10" step="1" id="notifyTimeout" class="option" />
       <span>0</span>秒</label>
   </section>
 
   <script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
+  <script src="js/sugar.min.js" type="text/javascript"></script>
   <script src="js/helpers.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
