弹出层中添加启用推送服务的配置项
推送服务的配置项已经加入到默认值中，此次修改仅在弹出页面中加入配置项的操作表单。

--- a/transit/popup.html
+++ b/transit/popup.html
@@ -12,6 +12,7 @@
 
   <section id="options">
     <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
+    <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/>
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
       <input type="range" min="1" max="10" step="1" id="notifyTimeout" class="option" />
