--- a/transit/popup.html
+++ b/transit/popup.html
@@ -12,6 +12,7 @@
 
   <section id="options">
     <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
+    <label><input type="checkbox" id="linkInspect" class="option" />启用链接划词</label><br/>
     <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/>
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
