--- a/transit/popup.html
+++ b/transit/popup.html
@@ -12,12 +12,14 @@
 
   <section id="options">
     <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
-    <label><input type="checkbox" id="linkInspect" class="option" />启用链接划词</label><br/>
-    <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/>
+    <label title=""><input type="checkbox" id="linkInspect" class="option" />启用链接划词</label>
+     <a href="#" class="hint" title="鼠标移动在链接上按下 Shift 键可以临时禁用链接，以方便进行划词">(?)</a> 
+    <br/>
+    <!-- <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/> -->
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
-      <input type="range" min="1" max="10" step="1" id="notifyTimeout" class="option" />
-      <span>0</span>秒</label>
+      <input type="range" min="3" max="10" step="1" id="notifyTimeout" class="option" />
+      <span></span>秒</label>
   </section>
 
   <script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
