更新链接划词的描述 fixed #5
用户反馈链接划词的操作描述不够明确

http://ruby-china.org/topics/16508#reply8

--- a/transit/popup.html
+++ b/transit/popup.html
@@ -13,7 +13,7 @@
   <section id="options">
     <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
     <label title=""><input type="checkbox" id="linkInspect" class="option" />启用链接划词</label>
-     <a href="#" class="hint" title="鼠标移动在链接上按下 Shift 键可以临时禁用链接，以方便进行划词">(?)</a> 
+     <a href="#" class="hint" title="先将鼠标移动到链接上，然后按信 Shift 皱不放，会临时禁用该链接，以方便对链接中的文本进行划词，划词后放开 Shift 键，链接会恢复">(?)</a> 
     <br/>
     <!-- <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/> -->
     <label title="页面划词的翻译结果停留时间">
