--- a/extension/popup.html
+++ b/extension/popup.html
@@ -18,7 +18,7 @@
     <!-- <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/> -->
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
-      <input type="range" min="3" max="10" step="1" id="notifyTimeout" class="option" />
+      <input type="range" min="3" max="10" step="1" id="notifyTimeout" class="option" data-highlight="true" />
       <span></span>秒</label>
   </section>
 
