--- a/extension/popup.html
+++ b/extension/popup.html
@@ -25,7 +25,7 @@
 
   <script src="js/jquery-2.0.3.min.js" type="text/javascript"></script>
   <script src="js/sugar.min.js" type="text/javascript"></script>
-  <script src="js/helpers.js" type="text/javascript"></script>
+  <script src="js/application.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
 </html>
