弹出窗口页面中添加设置显示结果模式的选项
分为 in-place 和 margin 两种

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -11,14 +11,26 @@
   <section id="result"></section>
 
   <section id="options">
-    <label><input type="checkbox" id="pageInspect" class="option" />启用页面划词</label><br/>
-    <label title=""><input type="checkbox" id="linkInspect" class="option" />启用链接划词</label>
+    <label><input type="checkbox" name="pageInspect" class="option" />启用页面划词</label><br/>
+    <label title=""><input type="checkbox" name="linkInspect" class="option" />启用链接划词</label>
      <a href="#" class="hint" title="先将鼠标移动到链接上，然后按信 Shift 皱不放，会临时禁用该链接，以方便对链接中的文本进行划词，划词后放开 Shift 键，链接会恢复">(?)</a><br/>
     <!-- <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/> -->
+    <div>
+      查看结果显示方式： <br/>
+      <label>
+        <input type="radio" class="option" name="notifyMode" value="margin"  />
+        屏幕边缘
+      </label>
+      <label>
+        <input type="radio" class="option" name="notifyMode" value="in-place" />
+        就近显示
+      </label>
+    </div>
     <label title="页面划词的翻译结果停留时间">
       <span>翻译停留时间：</span>
-      <input type="range" min="3" max="10" step="1" id="notifyTimeout" class="option" data-highlight="true" />
-      <span></span>秒</label>
+      <input type="range" min="3" max="10" step="1" name="notifyTimeout" class="option" data-highlight="true" />
+      <span></span>秒
+    </label>
   </section>
 
   <script src="js/jquery-2.1.0.min.js" type="text/javascript"></script>
