--- a/extension/options.html
+++ b/extension/options.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="TransitOptionsApp">
 <head>
   <meta charset="UTF-8">
   <title>TransIt 设置</title>
@@ -8,15 +8,64 @@
 </head>
 <body>
   <div class="board">
+
     <div class="borad-header">
       <h2>TransIt 设置</h2>
     </div>
-    <div class="board-content">
-      test
-    </div>
-  </div>
 
+    <div class="board-content">
+
+      <form class="form-horizontal" role="form" ng-controller="OptionsCtrl">
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">启用页面划词</label>
+          <div class="col-sm-10">
+            <label class="radio-inline"><input type="radio" name="pageInspect" ng-model="options.pageInspect" ng-value="true" />启用</label>
+            <label class="radio-inline"><input type="radio" name="pageInspect" ng-model="options.pageInspect" ng-value="false" /> 停用</label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">启用链接划词</label>
+          <div class="col-sm-10">
+            <label class="radio-inline"><input type="radio" name="linkInspect" ng-model="options.linkInspect" ng-value="true" />启用</label>
+            <label class="radio-inline"><input type="radio" name="linkInspect" ng-model="options.linkInspect" ng-value="false" /> 停用</label>
+
+            <div class="alert alert-info">
+              <strong>操作说明：</strong>
+              先将鼠标移动到链接上，然后按住 Shift 皱不放，会临时禁用该链接，
+              以方便对链接中的文本进行划词，划词后放开 Shift 键，链接会恢复。
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">划词翻译结果显示位置</label>
+          <div class="col-sm-10">
+            <label class="radio-inline"><input type="radio" name="notifyMode" ng-model="options.notifyMode" value="margin" /> 在窗口边缘显示</label>
+            <label class="radio-inline"><input type="radio" name="notifyMode" ng-model="options.notifyMode" value="in-place" /> 在选择的文本附近显示</label>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label class="col-sm-2 control-label">划词翻译结果显示位置</label>
+          <div class="col-sm-10" style="padding-top: 7px;">
+            <input type="range" min="3" max="10" step="1" ng-model="options.notifyTimeout" data-highlight="true" />
+            <span class="label label-info">{{ options.notifyTimeout }} 秒</span>
+          </div>
+
+        </div>
+
+      </form>
+
+    </div><!-- .board-content -->
+
+  </div><!-- .board -->
+
+  <script src="js/angular.min.js" type="text/javascript"></script>
   <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
   <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/application.js"></script>
+  <script type="text/javascript" src="js/options.js"></script>
 </body>
 </html>
