--- a/extension/options.html
+++ b/extension/options.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="TransitOptionsApp">
 <head>
   <meta charset="UTF-8">
-  <title>TransIt 设置</title>
+  <title>偏好设定</title>
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/options.css" type="text/css" />
 </head>
@@ -10,7 +10,9 @@
   <div class="board">
 
     <div class="borad-header">
-      <h2>TransIt 设置</h2>
+      <strong class="title">
+        <img src="icon48.png" alt="TransIt Logo" /> 偏好设定
+      </strong>
     </div>
 
     <div class="board-content">
