--- a/extension/popup.html
+++ b/extension/popup.html
@@ -10,36 +10,15 @@
 
   <section id="result"></section>
 
-  <section id="options" ng-controller="OptionsCtrl">
-    <label>
-      <input type="checkbox" ng-model="options.pageInspect" class="option" />
-      启用页面划词
-    </label>
+  <footer ng-controller="OptionsCtrl" >
+    <a href="#" class="btn-options pull-right" title="偏好设定"></a>
 
-    <label>
-      <input type="checkbox" ng-model="options.linkInspect" class="option" />
-      启用链接划词
-      <a href="#" class="hint" title="先将鼠标移动到链接上，然后按信 Shift 皱不放，会临时禁用该链接，以方便对链接中的文本进行划词，划词后放开 Shift 键，链接会恢复">(?)</a>
-    </label>
+    <input type="checkbox" name="pageInspect" id="optionPageInspect" ng-model="options.pageInspect" />
+    <label for="optionPageInspect" title="页面划词"></label>
 
-    <!-- <label><input type="checkbox" id="pushItem" class="option" />启用推送服务</label><br/> -->
-    <label>
-      <input type="radio" class="option" ng-model="options.notifyMode" value="margin"  />
-      划词结果在窗口边缘显示
-    </label>
-
-    <label>
-      <input type="radio" class="option" ng-model="options.notifyMode" value="in-place" />
-      划词结果就近显示
-    </label>
-
-    </div>
-    <label title="页面划词的翻译结果停留时间">
-      <span>翻译停留时间：</span>
-      <input type="range" min="3" max="10" step="1" ng-model="options.notifyTimeout" class="option" data-highlight="true" />
-      <span>{{ options.notifyTimeout }}</span>秒
-    </label>
-  </section>
+    <input type="checkbox" name="linkInspect" id="optionLinkInspect" ng-model="options.linkInspect" />
+    <label for="optionLinkInspect" title="链接划词"></label>
+  </footer>
 
   <script src="js/angular.min.js" type="text/javascript"></script>
   <script src="js/jquery-2.1.0.min.js" type="text/javascript"></script>
