--- a/extension/options.html
+++ b/extension/options.html
@@ -41,11 +41,17 @@
           </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group notify-mode">
           <label class="col-sm-2 control-label">划词翻译结果显示位置</label>
           <div class="col-sm-10">
-            <label class="radio-inline"><input type="radio" name="notifyMode" ng-model="options.notifyMode" value="margin" /> 在窗口边缘显示</label>
-            <label class="radio-inline"><input type="radio" name="notifyMode" ng-model="options.notifyMode" value="in-place" /> 在选择的文本附近显示</label>
+            <label class="radio-inline">
+              <img src="img/notify-mode-margin.png" alt="">
+              <input type="radio" name="notifyMode" ng-model="options.notifyMode" value="margin" /> 在窗口边缘显示
+            </label>
+            <label class="radio-inline">
+              <img src="img/notify-mode-in-place.png" alt="">
+              <input type="radio" name="notifyMode" ng-model="options.notifyMode" value="in-place" /> 在选择的文本附近显示
+            </label>
           </div>
         </div>
 
