baidu translate word

--- a/extension/jasmine/SpecRunner.html
+++ b/extension/jasmine/SpecRunner.html
@@ -13,10 +13,12 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="../js/translators/youdao_translator.js"></script>
+  <script type="text/javascript" src="../js/translators/baidu_translator.js"></script>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/SpecHelper.js"></script>
   <script type="text/javascript" src="spec/translators/youdao_translator_spec.js"></script>
+  <script type="text/javascript" src="spec/translators/baidu_translator_spec.js"></script>
 
 </head>
 
