--- a/extension/options.html
+++ b/extension/options.html
@@ -34,9 +34,8 @@
             <label class="radio-inline"><input type="radio" name="linkInspect" ng-model="options.linkInspect" ng-value="false" /> 停用</label>
 
             <div class="alert alert-info">
-              <strong>操作说明：</strong>
-              先将鼠标移动到链接上，然后按住 Shift 皱不放，会临时禁用该链接，
-              以方便对链接中的文本进行划词，划词后放开 Shift 键，链接会恢复。
+              快速两次敲击 <code>Caps Lock</code>，会禁用页面链接，方便划词，
+              再次两次敲击，页面链接将重新恢复为可以点击。
             </div>
           </div>
         </div>
