support auto watch
watch file changes and auto execute tasks

--- a/src/options.html
+++ b/src/options.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <title>偏好设定</title>
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
   <link rel="stylesheet" href="css/options.css" type="text/css" />
 </head>
 <body>
@@ -11,7 +10,7 @@
 
     <div class="borad-header">
       <strong class="title">
-        <img src="icon48.png" alt="TransIt Logo" /> 偏好设定
+        <img src="img/icon48.png" alt="TransIt Logo" /> 偏好设定
       </strong>
     </div>
 
