resolve angular issue in options page
remove duplicate options.css
add angular from bower

--- a/src/options.html
+++ b/src/options.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="TransitOptionsApp">
+<html lang="en" ng-app="TransitOptionsApp" ng-csp>
 <head>
   <meta charset="UTF-8">
   <title>偏好设定</title>
+  
   <link rel="stylesheet" href="css/options.css" type="text/css" />
 </head>
 <body>
@@ -74,9 +75,7 @@
 
   </div><!-- .board -->
 
-  <script src="js/angular.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="js/jquery-2.1.0.min.js"></script>
-  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/angular.js" ></script>
   <script type="text/javascript" src="js/application.js"></script>
   <script type="text/javascript" src="js/options.js"></script>
 </body>
