--- a/src/options.html
+++ b/src/options.html
@@ -43,7 +43,7 @@
 
             <div class="hint">
               快速两次敲击 <code>Caps Lock</code>，会禁用页面链接，方便划词，
-              再次两次敲击，页面链接将重新恢复为可以点击。
+              划词结束、点击页面任意一处或者再次两次敲击，页面链接将重新恢复为可以点击。
             </div>
           </div>
         </div>
