--- a/src/options.html
+++ b/src/options.html
@@ -75,8 +75,8 @@
 
   </div><!-- .board -->
 
-  <script type="text/javascript" src="js/angular.js" ></script>
-  <script type="text/javascript" src="js/application.js"></script>
+  <script type="text/javascript" src="js/lib-all.js" ></script>
+  <script type="text/javascript" src="js/angular-all.js"></script>
   <script type="text/javascript" src="js/options.js"></script>
 </body>
 </html>
