--- a/src/popup.html
+++ b/src/popup.html
@@ -31,9 +31,8 @@
     </footer>
   </div>
   
-  <script src="js/application.js" type="text/javascript"></script>
-  <script src="js/angular.js" type="text/javascript"></script>
-  <script src="js/elastic.js" type="text/javascript"></script>
+  <script src="js/lib-all.js" type="text/javascript"></script>
+  <script src="js/angular-all.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
 </html>
