add strict mode

--- a/src/options.html
+++ b/src/options.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="TransitOptionsApp" ng-csp>
+<html lang="en" ng-app="TransitApp" ng-csp>
 <head>
   <meta charset="UTF-8">
   <title>偏好设定</title>
   
   <link rel="stylesheet" href="css/options.css" type="text/css" />
 </head>
-<body>
+<body ng-controller="OptionsCtrl">
   <div class="board">
 
     <div class="borad-header">
