--- a/src/popup.html
+++ b/src/popup.html
@@ -19,8 +19,9 @@
   </div>
 
   <footer ng-controller="OptionsCtrl">
-    <a href="javascript:;" title="偏好设定"
-       class="btn-options pull-right"></a>
+    <a href="#" title="偏好设定"
+       class="btn-options pull-right"
+       ng-click="openExtensionPage()"></a>
 
     <a href="#" title="翻译服务提供商"
        class="btn-translator pull-right {{options.translator}}"></a>
@@ -34,8 +35,6 @@
     </label>
   </footer>
   
-  <script src="js/lib-all.js" type="text/javascript"></script>
-  <script src="js/angular-all.js" type="text/javascript"></script>
   <script src="js/popup.js" type="text/javascript"></script>
 </body>
 </html>
