fix textarea elastic in popup

--- a/src/popup.html
+++ b/src/popup.html
@@ -16,7 +16,7 @@
               msd-elastic></textarea>
 
     <div id="result" ng-bind-html="output | html_safe"></div>
-  </div>
+  </div>d
 
   <footer ng-controller="OptionsCtrl">
     <a href="#" title="偏好设定"
