--- a/src/options.html
+++ b/src/options.html
@@ -19,14 +19,14 @@
 
       <form class="form-horizontal" role="form" ng-controller="OptionsCtrl">
 
-        <div class="form-group">
+<!--         <div class="form-group">
           <label class="control-label">翻译服务</label>
           <div class="controls">
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="youdao" /> 有道翻译</label>
-            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" /> 百度翻译</label>
+            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" disabled /> 百度翻译</label>
           </div>
         </div>
-
+ -->
         <div class="form-group">
           <label class="control-label">启用页面划词</label>
           <div class="controls">
