link inspect mode indicator
- when link inspect mode is on, popup icon will changed
- update documentation for link inspect in popup and options page

--- a/src/options.html
+++ b/src/options.html
@@ -42,8 +42,10 @@
             <label class="radio-inline"><input type="radio" name="linkInspect" ng-model="options.linkInspect" ng-value="false" /> 停用</label>
 
             <div class="hint">
-              快速两次敲击 <code>Caps Lock</code>，会禁用页面链接，方便划词，
-              划词结束、点击页面任意一处或者再次两次敲击，页面链接将重新恢复为可以点击。
+              使用快捷键
+              <code>Ctrl + Shift + L</code>
+              启用/禁用链接划词模式。
+              划词结束或者点击页面任意一处，将自动恢复为禁用状态。
             </div>
           </div>
         </div>
