--- a/src/popup.html
+++ b/src/popup.html
@@ -34,7 +34,7 @@
       <span class="icon icon-text"></span>
     </label>
 
-    <label class="checkbox-inline" title="链接划词">
+    <label class="checkbox-inline" title="链接划词（Ctrl+Shift+L）">
       <input type="checkbox" ng-model="options.linkInspect" /> 
       <span class="icon icon-link"></span>
     </label>
