Use new translator icons.
Click the icon will toggle in 3 translators.

--- a/src/options.html
+++ b/src/options.html
@@ -24,6 +24,7 @@
           <div class="controls">
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="youdao" /> 有道翻译</label>
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" disabled /> 百度翻译</label>
+            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="bing" disabled /> 必应翻译</label>
           </div>
         </div>
 
