--- a/src/options.html
+++ b/src/options.html
@@ -23,8 +23,8 @@
           <label class="control-label">翻译服务</label>
           <div class="controls">
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="youdao" /> 有道翻译</label>
-            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" disabled /> 百度翻译</label>
-            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="bing" disabled /> 必应翻译</label>
+            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" /> 百度翻译</label>
+            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="bing" /> 必应翻译</label>
           </div>
         </div>
 
