--- a/src/options.html
+++ b/src/options.html
@@ -25,6 +25,7 @@
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="youdao" /> 有道翻译</label>
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="baidu" /> 百度翻译</label>
             <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="bing" /> 必应翻译</label>
+            <label class="radio-inline"><input type="radio" name="translator" ng-model="options.translator" value="sanskrit" /> 梵文翻译</label>
           </div>
         </div>
 
@@ -69,7 +70,16 @@
             <input type="range" min="3" max="10" step="1" ng-model="options.notifyTimeout" data-highlight="true" />
             <span class="label label-info">{{ options.notifyTimeout }} 秒</span>
           </div>
+        </div>
 
+        <div class="form-group">
+          <label class="control-label">选择梵文词典</label>
+          <div class="controls" style="padding-top: 7px;">
+            <input name="dictfiles" type="file" fileread="dictfiles" multiple=true accept=".mdx,.mdd">
+            <ul>
+              <li ng-repeat="file in dictfiles">{{file.name}}</li>
+            </ul>
+          </div>
         </div>
 
       </form>
