--- a/src/options.html
+++ b/src/options.html
@@ -64,10 +64,22 @@
           </div>
         </div>
 
+        <div class="form-group notify-mode">
+          <label class="control-label">划词翻译结果替换模式</label>
+          <div class="controls">
+            <label class="radio-inline">
+              <input type="radio" name="replaceMode" ng-model="options.replaceMode" value="replace" /> 每次只显示一个
+            </label>
+            <label class="radio-inline">
+              <input type="radio" name="replaceMode" ng-model="options.replaceMode" value="queue" /> 显示一个队列，由下面的时长控制消失
+            </label>
+          </div>
+        </div>
+
         <div class="form-group">
           <label class="control-label">划词翻译结果显示时长</label>
           <div class="controls" style="padding-top: 7px;">
-            <input type="range" min="3" max="10" step="1" ng-model="options.notifyTimeout" data-highlight="true" />
+            <input type="range" min="3" max="50" step="2" ng-model="options.notifyTimeout" data-highlight="true" width="200"/>
             <span class="label label-info">{{ options.notifyTimeout }} 秒</span>
           </div>
         </div>
